[package]
name = "plexfs"
version = "0.1.0"
authors = ["Ruin0x11 <ipickering2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = { git = "https://github.com/zargony/fuse-rs" }
reqwest = { version = "0.10", features = ["json", "blocking"] }
anyhow = "1.0.26"
quick-xml = { version = "0.17.2", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
time = "0.2.3"
env_logger = "0.7.1"
libc = "0.2.66"
clap = "2.33.0"
log = "0.4.8"
